--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Vite + React + TS</title>
-    
+    <script type="text/javascript" src="https://checkout.wompi.co/widget.js"></script>
   </head>
   <body>
     <div id="root"></div>
